--- a/PruebaNet8.APP/Views/Categoria/pantallaCategoria.cshtml
+++ b/PruebaNet8.APP/Views/Categoria/pantallaCategoria.cshtml
@@ -21,7 +21,7 @@
                 <option class="opcionMenorPrecio" value="asc">Menor Precio</option>
                 <option class="opcionMayorPrecio" value="desc">Mayor Precio</option>
             </select>
-            <select class="filtroEstado">
+            <select class="filtroEstado oculto">
                 <option selected value="1">Activo</option>
                 <option value="0">No Activo</option>
             </select>
