--- a/PruebaNet8.APP/Views/Home/Productos.cshtml
+++ b/PruebaNet8.APP/Views/Home/Productos.cshtml
@@ -6,6 +6,7 @@
 @section Estilos{
     <link rel="stylesheet" href="~/css/vistas/seccionProductos.css" />
     <link rel="stylesheet" href="~/vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/styles.css" />
 }
 
 <section class="seccionProductos">
@@ -14,7 +15,7 @@
     <div class="seccionFiltros">
 
         <div class="divOpciones">
-            <p class="opcionCrear">Crear Producto</p>
+            <p class="opcionCrear oculto">Crear Producto</p>
         </div>
 
         <select class="filtroTipos">
@@ -28,7 +29,7 @@
             <option class="opcionMayorPrecio" value="desc">Mayor Precio</option>
         </select>
 
-        <select class="filtroEstado">
+        <select class="filtroEstado oculto">
             <option selected value="1">Activo</option>
             <option value="0">No Activo</option>
         </select>
