--- a/PruebaNet8.APP/wwwroot/css/vistas/pantallaCategoria.css
+++ b/PruebaNet8.APP/wwwroot/css/vistas/pantallaCategoria.css
@@ -87,9 +87,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 230px;
-    border-radius: .5em;
+    border-radius: .5em; /* Bordes redondeados para el producto */
     border: 2px solid rgba(0,0,0,.1);
     background-color: white;
     cursor: pointer;
@@ -97,13 +97,14 @@
 
 .product .imageDiv {
     height: 60%;
+    width: 60%;
 }
 
 .product .imageDiv img {
     width: 100%;
     height: 100%;
-    /* aspect-ratio: 1 / 2; */
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: .2em;
 }
 
 .product .name {
