--- a/PruebaNet8.APP/wwwroot/css/vistas/pantallaProducto.css
+++ b/PruebaNet8.APP/wwwroot/css/vistas/pantallaProducto.css
@@ -76,7 +76,7 @@
     justify-content: space-evenly;
 }
 
-.opciones {
+.opcionesImg {
     width: 10%;
     height: 100%;
     display: flex;
@@ -136,11 +136,11 @@
 }
 
 .divOpciones {
-    height: 20%;
-    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-direction: column;
 }
 
 .detallesProducto{
@@ -169,9 +169,11 @@
     display: flex;
     width: 100%;
     height: 50%;
-    text-align: center;
+    text-align: left;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    white-space: pre-line;
+    line-height: 1.3;
 }
 
 .infoProducto{
