--- a/PruebaNet8.APP/wwwroot/css/vistas/seccionCategorias.css
+++ b/PruebaNet8.APP/wwwroot/css/vistas/seccionCategorias.css
@@ -71,6 +71,13 @@
     gap: 2em;
 }
 
+.opcionesCrud{
+    display: flex;
+    width: 3em;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .opcionCrear, .opcionEditar, .opcionEliminar, .btnVerProductos{
     color: var(--color-botones);
     font-size: 1em;
@@ -112,31 +119,31 @@
     gap: .5em;
 }
 
-.product{
+.product {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 230px;
-    border-radius: 0 0 .5em .5em; /* Bordes redondeados para el producto */
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, .2); */
+    border-radius: .5em; /* Bordes redondeados para el producto */
     border: 2px solid rgba(0,0,0,.1);
     background-color: white;
     cursor: pointer;
 }
 
-.product .imageDiv{
+.product .imageDiv {
     height: 60%;
+    width: 60%;
 }
 
-.product .imageDiv img{
-    width:100%;
+.product .imageDiv img {
+    width: 100%;
     height: 100%;
-    /* aspect-ratio: 1 / 2; */
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: .2em;
 }
 
-.product .name{
+.product .name {
     text-align: center;
     padding: 0 .2em;
 }
