--- a/PruebaNet8.APP/wwwroot/css/vistas/seccionProductos.css
+++ b/PruebaNet8.APP/wwwroot/css/vistas/seccionProductos.css
@@ -58,26 +58,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 230px;
     border-radius: .5em; /* Bordes redondeados para el producto */
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, .2); */
     border: 2px solid rgba(0,0,0,.1);
     background-color: white;
     cursor: pointer;
 }
 
-
-
 .product .imageDiv {
-    height: 60%;
+    height: 65%;
+    width: 60%;
+    overflow: hidden;
 }
 
 .product .imageDiv img {
     width: 100%;
     height: 100%;
-    /* aspect-ratio: 1 / 2; */
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: .2em;
 }
 
 .product .name {
